--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,11 @@
   "name": "lookup-service",
   "version": "1.0.0",
   "description": "Lookup service",
-  "main": "index.js",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec node_modules/.bin/babel-node src/index.js"
+    "start": "nodemon -L --exec babel-node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -26,24 +27,26 @@
   },
   "homepage": "https://github.com/RahulNagaraj/lookup-service#readme",
   "devDependencies": {
-		"@babel/core": "^7.15.8",
-		"@babel/node": "^7.15.8",
-		"@babel/preset-env": "^7.15.8",
-		"nodemon": "^2.0.14"
-	},
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/node": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "nodemon": "^2.0.14"
+  },
   "dependencies": {
-		"apollo-server": "^2.1.0",
-		"apollo-server-express": "^2.1.0",
-		"bcrypt": "^3.0.2",
-		"cors": "^2.8.4",
-		"dotenv": "^6.1.0",
-		"express": "^4.16.4",
-		"graphql": "^14.0.2",
-		"graphql-iso-date": "^3.6.1",
-		"graphql-resolvers": "^0.2.2",
-		"jsonwebtoken": "^8.3.0",
-		"pg": "^7.5.0",
-		"sequelize": "^4.41.0",
-		"uuid": "^3.3.2"
-	}
+    "apollo-server": "^2.1.0",
+    "apollo-server-express": "^2.1.0",
+    "bcrypt": "^3.0.2",
+    "cors": "^2.8.4",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
+    "graphql": "^14.0.2",
+    "graphql-iso-date": "^3.6.1",
+    "graphql-resolvers": "^0.2.2",
+    "jsonwebtoken": "^8.3.0",
+    "pg": "^7.5.0",
+    "sequelize": "^4.41.0",
+    "uuid": "^3.3.2",
+    "graphql-request": "^3.6.1"
+  }
 }
