--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,31 @@
-version: '3.9'
+version: "3.9"
 services:
     postgres:
-        container_name: 'lookup-postgres'
+        container_name: "lookup-postgres"
         image: postgres
         restart: always
         environment:
             POSTGRES_USER: postgres
             POSTGRES_PASSWORD: postgres
             POSTGRES_DB: lookup
-        ports: 
-            - '5432:5432'
+        ports:
+            - "5432:5432"
         volumes:
             - ./server/pgdata:/var/lib/postgresql/data
-    
+
     server:
-        container_name: 'lookup-server'
-        depends_on: 
+        container_name: "lookup-server"
+        depends_on:
             - postgres
         build:
             context: ./server
             dockerfile: Dockerfile
         ports:
-            - '8000:8000'
-        container_name: server
+            - "8000:8000"
         restart: always
         volumes:
-            - ./server:/usr/app/lookup_service/server
-            - /usr/app/lookup_service/server/node_modules
+            - ./server:/usr/app/lookup/server
+            - /usr/app/lookup/server/node_modules
         environment:
             PORT: 8000
             DB_SCHEMA: postgres
@@ -34,3 +33,20 @@ services:
             DB_PASSWORD: postgres
             DB_HOST: postgres
             DB_NAME: postgres
+
+    client:
+        container_name: "lookup-ui"
+        depends_on:
+            - server
+        build:
+            context: ./client
+            dockerfile: Dockerfile
+        restart: always
+        ports:
+            - "3000:3000"
+        volumes:
+            - ./client:/usr/app/lookup/client
+            - /usr/app/lookup/client/node_modules
+        environment:
+            PORT: 3000
+            CHOKIDAR_USEPOLLING: "true"
