--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /usr/app/lookup/client
 
 ENV PATH /app/node_modules/.bin:$PATH
 
-COPY package.json ./
+COPY package*.json ./
 
 RUN npm install
 
