--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.1",
+    "google-map-react": "^2.1.10",
+    "google-maps-react": "^2.0.6",
     "graphql": "^15.7.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
