--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.16",
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.0.3",
+    "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.3",
     "@mui/styles": "^5.0.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -16,6 +18,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.1",
+    "date-fns": "^2.25.0",
     "google-map-react": "^2.1.10",
     "google-maps-react": "^2.0.6",
     "graphql": "^15.7.0",
