--- a/server/package.json
+++ b/server/package.json
@@ -42,11 +42,13 @@
     "express": "^4.16.4",
     "graphql": "^14.0.2",
     "graphql-iso-date": "^3.6.1",
+    "graphql-request": "^3.6.1",
     "graphql-resolvers": "^0.2.2",
     "jsonwebtoken": "^8.3.0",
+    "mongodb": "^4.1.4",
+    "mongoose": "^5.10.0",
     "pg": "^7.5.0",
     "sequelize": "^4.41.0",
-    "uuid": "^3.3.2",
-    "graphql-request": "^3.6.1"
+    "uuid": "^3.3.2"
   }
 }
