--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "google-map-react": "^2.1.10",
     "google-maps-react": "^2.0.6",
     "graphql": "^15.7.0",
+    "highcharts": "^9.3.1",
+    "highcharts-react-official": "^3.1.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
