--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
     "graphql-iso-date": "^3.6.1",
     "graphql-request": "^3.6.1",
     "graphql-resolvers": "^0.2.2",
+    "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "^8.3.0",
     "mongodb": "^4.1.4",
     "mongoose": "^5.10.0",
