--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         ports:
             - "5432:5432"
         volumes:
-            - ./server/pgdata:/var/lib/postgresql/data
+            - ./pgdata:/var/lib/postgresql/data
 
     mongodb:
         container_name: "lookup-mongodb"
@@ -24,7 +24,25 @@ services:
         ports:
             - "27017:27017"
         volumes:
-            - ./server/mongodata:/data/db
+            - ./mongodata:/data/db
+
+    neo4j:
+        container_name: "lookup-neo4j"
+        image: neo4j:latest
+        restart: unless-stopped
+        ports:
+            - 7474:7474
+            - 7687:7687
+        volumes:
+            - ./neo4j/conf:/conf
+            - ./neo4j/data:/data
+            - ./neo4j/import:/import
+            - ./neo4j/logs:/logs
+            - ./neo4j/plugins:/plugins
+        environment:
+            - NEO4J_dbms_memory_pagecache_size=1G
+            - NEO4J_dbms.memory.heap.initial_size=1G
+            - NEO4J_dbms_memory_heap_max__size=1G
 
     mongo_admin:
         image: mongo-express
