--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,8 +72,10 @@ services:
         container_name: lookup-jupyter
         depends_on:
             - mongodb
+            - neo4j
         links:
             - mongodb
+            - neo4j
 
     server:
         container_name: "lookup-server"
@@ -97,18 +99,18 @@ services:
             DB_HOST: postgres
             DB_NAME: lookup
 
-    go:
-        container_name: "lookup-go"
-        depends_on:
-            - mongodb
-        build:
-            context: ./go
-            dockerfile: Dockerfile
-        ports:
-            - "8080:8080"
-        restart: always
-        volumes:
-            - ./go:/usr/app/lookup/go
+    # go:
+    #     container_name: "lookup-go"
+    #     depends_on:
+    #         - mongodb
+    #     build:
+    #         context: ./go
+    #         dockerfile: Dockerfile
+    #     ports:
+    #         - "8080:8080"
+    #     restart: always
+    #     volumes:
+    #         - ./go:/usr/app/lookup/go
 
     client:
         container_name: "lookup-ui"
