--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,12 +82,13 @@ services:
         depends_on:
             - postgres
             - mongodb
+            - neo4j
         build:
             context: ./server
             dockerfile: Dockerfile
         ports:
             - "8000:8000"
-        restart: always
+        restart: unless-stopped
         volumes:
             - ./server:/usr/app/lookup/server
             - /usr/app/lookup/server/node_modules
@@ -119,7 +120,7 @@ services:
         build:
             context: ./client
             dockerfile: Dockerfile
-        restart: always
+        restart: unless-stopped
         ports:
             - "3000:3000"
         volumes:
