--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,7 @@
     "jsonwebtoken": "^8.3.0",
     "mongodb": "^4.1.4",
     "mongoose": "^5.10.0",
+    "neo4j-driver": "^4.4.1",
     "pg": "^7.5.0",
     "sequelize": "^4.41.0",
     "uuid": "^3.3.2"
